# aptf

./: .githubignore  .gitignore  AptF.cpp  AptF.h  AptF.pro  AptF.qbs  AptF.ts  AptF.ui  AptfSettingDialog.cpp  AptfSettingDialog.h  AptfSettingDialog.ui  AptfTtsClient.cpp  AptfTtsClient.h  CMakeLists.txt  Images.qrc  PlainTextEditMouseRelease.cpp  PlainTextEditMouseRelease.h  PreCompile.h  README.md  aptf.desktop  main.cpp
.github/.github/workflows/: qt6-ci.yml  verify-nested-dir-fix.yml
.github/workflows/: qt6-ci.yml
Images/: Downloading.mng  Downloading.xcf  Icon.xcf  TaskbarAndStartmenu.xcf  TrayIcon.xcf
Material/Image/: IMG20150105163631773.jpg.txt
Material/LevelListDrawable/: progressdrawable.xml
ToDo/: ToDo1.mm
sh/: adbPathAptf.sh  dnf.v.sh  exz.v.sh  hg.v.sh  ssh.v.sh
share/apps/AptF/: AptF.notifyrc
xyz/xyz/abc/def/: test-file.md
